# toolboxrs

./: .gitignore  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: base64.rs  cli_model.rs  hash.rs  lib.rs
src/: base64.rs  cidr.rs  cli.rs  hash.rs  internal.rs  lib.rs  main.rs
src/internal/: base64.rs  cidr.rs  hash.rs
wasm/: Cargo.toml
wasm/js/src/: main.js
wasm/src/: lib.rs
wasm/toolboxrs-ui/: package-lock.json  package.json  vite.config.ts
wasm/toolboxrs-ui/src/: App.svelte
web/src/: main.js
