[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# Specify that it's a library crate
[lib]
crate-type = ["rlib", "dylib"]


[dependencies]
cidr = "0.2.2"
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
regex = "1.10.2"
base64 = "0.21.5"
blake3 = "1.5.0"
sha3 = "0.10.8"
sha2 = "0.10.8"
hex-literal = "0.4.1"
hex = { version = "0.4.3",features = ["serde"] }
