cargo-features = ["per-package-target"]

[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-unknown-unknown"

# Specify that it's a library crate
[lib]
crate-type = ["cdylib", "rlib"]

# Specify custom build script
# build = "build.rs"

# Declare dependencies
[dependencies]
shared = { path = "../shared" }
wasm-bindgen = "0.2.92"
